--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
     </div>
     <script src="app.js"></script>
     <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker
-          .register("/To-Do-List-PWA/service-worker.js", {
-            scope: "/To-Do-List-PWA/",
-          })
-          .then((reg) => console.log("Service Worker Registered"))
-          .catch((err) => console.error("Service Worker Error: ", err));
+      const sw = new URL('/To-Do-List-PWA/service-worker.js', import.meta.url);
+
+      if ('serviceWorker' in navigator) {
+        const s = navigator.serviceWorker;
+
+        s.register(sw.href, {
+          scope: '/To-Do-List-PWA/',
+        })
+          .then(() => 
+            console.log('Service Worker Registered for scope:', sw.href, 'with', import.meta.url)
+          )
+          .catch((err) => 
+            console.error('Service Worker Error:', err)
+          );
       }
+
     </script>
   </body>
 </html>
