--- a/index.html
+++ b/index.html
@@ -29,24 +29,6 @@
       <button id="addTaskBtn">Add task</button>
       <ul id="taskList"></ul>
     </div>
-    <script src="app.js"></script>
-    <script>
-      const sw = new URL('/To-Do-List-PWA/service-worker.js', import.meta.url);
-
-      if ('serviceWorker' in navigator) {
-        const s = navigator.serviceWorker;
-
-        s.register(sw.href, {
-          scope: '/To-Do-List-PWA/',
-        })
-          .then(() => 
-            console.log('Service Worker Registered for scope:', sw.href, 'with', import.meta.url)
-          )
-          .catch((err) => 
-            console.error('Service Worker Error:', err)
-          );
-      }
-
-    </script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
