--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       <button id="addTaskBtn">Add task</button>
       <ul id="taskList"></ul>
     </div>
-    <script src="app.js" type="module"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
