--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <body>
     <h1>My To-Do List</h1>
     <div class="container">
-      <input type="text" id="taskInput" placeholder="Enter a new task" />
+      <label type="taskInput"><h2>Enter a task</h2></label>
+      <input name="taskInput" type="text" id="taskInput" placeholder="Enter a new task" />
       <button id="addTaskBtn">Add task</button>
       <ul id="taskList"></ul>
     </div>
