--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </header>
     <main>
       <div class="container">
-        <label type="taskInput"><h2>Enter a task</h2></label>
+        <label for="taskInput"><h2>Enter a task</h2></label>
         <input name="taskInput" type="text" id="taskInput" placeholder="Enter a new task" />
         <button id="addTaskBtn">Add task</button>
         <ul id="taskList"></ul>
       </div>
       <div id="chatbot-container">
         <div id="chat-history"></div>
-        <input type="text" id="chat-input">
+        <input type="text" id="chat-input" placeholder="Enter a new task">
         <button id="send-btn">Send</button>
       </div>      
     </main>
